added functions for finding duplicates from one dataframe to the next

--- a/Pandas_tosql_upsert.ipynb
+++ b/Pandas_tosql_upsert.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -77,7 +77,7 @@
        "0  2015-06-28 11:36:16  44.615305 -88.039688  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -177,7 +177,7 @@
        "0  2015-06-28 11:36:16  44.615305 -88.039688  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -250,7 +250,7 @@
        "0  2015-06-28 11:36:16              0.0  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -273,7 +273,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "new df is 11806 rows, and data in db is 5903 rows\n"
+      "new df is 11806 rows, and data in db is 11806 rows\n"
      ]
     }
    ],
@@ -286,162 +286,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#Now let's find out what rows are duplicates using a combination of full outer join and select where is not null\n",
+    "df_all = pd.merge(df2, df_in_db, how='outer', on='act_id')\n",
+    "print 'outer joined df is %s rows' %(df_all.shape[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>act_id</th>\n",
-       "      <th>altitude</th>\n",
-       "      <th>distance</th>\n",
-       "      <th>grade_smooth</th>\n",
-       "      <th>lat</th>\n",
-       "      <th>long</th>\n",
-       "      <th>time</th>\n",
-       "      <th>velocity_smooth</th>\n",
-       "      <th>index</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>11806.0</td>\n",
-       "      <td>11806.000000</td>\n",
-       "      <td>11806.000000</td>\n",
-       "      <td>11806.000000</td>\n",
-       "      <td>11806.000000</td>\n",
-       "      <td>11806.000000</td>\n",
-       "      <td>11806.000000</td>\n",
-       "      <td>11806.000000</td>\n",
-       "      <td>5903.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>334723309.0</td>\n",
-       "      <td>198.998577</td>\n",
-       "      <td>22510.749907</td>\n",
-       "      <td>0.106827</td>\n",
-       "      <td>44.597998</td>\n",
-       "      <td>-88.086968</td>\n",
-       "      <td>3357.149077</td>\n",
-       "      <td>7.784686</td>\n",
-       "      <td>2951.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>18.299093</td>\n",
-       "      <td>13539.992780</td>\n",
-       "      <td>2.353318</td>\n",
-       "      <td>0.019859</td>\n",
-       "      <td>0.039451</td>\n",
-       "      <td>1775.176818</td>\n",
-       "      <td>1.413113</td>\n",
-       "      <td>1704.193651</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>334723309.0</td>\n",
-       "      <td>176.700000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>-19.500000</td>\n",
-       "      <td>44.572781</td>\n",
-       "      <td>-88.150414</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>334723309.0</td>\n",
-       "      <td>179.800000</td>\n",
-       "      <td>10329.525000</td>\n",
-       "      <td>-0.700000</td>\n",
-       "      <td>44.583538</td>\n",
-       "      <td>-88.119510</td>\n",
-       "      <td>1831.250000</td>\n",
-       "      <td>7.000000</td>\n",
-       "      <td>1475.500000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>334723309.0</td>\n",
-       "      <td>200.300000</td>\n",
-       "      <td>22122.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>44.591711</td>\n",
-       "      <td>-88.095911</td>\n",
-       "      <td>3307.000000</td>\n",
-       "      <td>7.800000</td>\n",
-       "      <td>2951.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>334723309.0</td>\n",
-       "      <td>215.900000</td>\n",
-       "      <td>34199.150000</td>\n",
-       "      <td>0.700000</td>\n",
-       "      <td>44.611576</td>\n",
-       "      <td>-88.041069</td>\n",
-       "      <td>4909.750000</td>\n",
-       "      <td>8.500000</td>\n",
-       "      <td>4426.500000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>334723309.0</td>\n",
-       "      <td>235.500000</td>\n",
-       "      <td>46258.200000</td>\n",
-       "      <td>22.500000</td>\n",
-       "      <td>44.643393</td>\n",
-       "      <td>-88.015313</td>\n",
-       "      <td>6545.000000</td>\n",
-       "      <td>12.900000</td>\n",
-       "      <td>5902.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "            act_id      altitude      distance  grade_smooth           lat  \\\n",
-       "count      11806.0  11806.000000  11806.000000  11806.000000  11806.000000   \n",
-       "mean   334723309.0    198.998577  22510.749907      0.106827     44.597998   \n",
-       "std            0.0     18.299093  13539.992780      2.353318      0.019859   \n",
-       "min    334723309.0    176.700000      0.000000    -19.500000     44.572781   \n",
-       "25%    334723309.0    179.800000  10329.525000     -0.700000     44.583538   \n",
-       "50%    334723309.0    200.300000  22122.000000      0.000000     44.591711   \n",
-       "75%    334723309.0    215.900000  34199.150000      0.700000     44.611576   \n",
-       "max    334723309.0    235.500000  46258.200000     22.500000     44.643393   \n",
-       "\n",
-       "               long          time  velocity_smooth        index  \n",
-       "count  11806.000000  11806.000000     11806.000000  5903.000000  \n",
-       "mean     -88.086968   3357.149077         7.784686  2951.000000  \n",
-       "std        0.039451   1775.176818         1.413113  1704.193651  \n",
-       "min      -88.150414      0.000000         0.000000     0.000000  \n",
-       "25%      -88.119510   1831.250000         7.000000  1475.500000  \n",
-       "50%      -88.095911   3307.000000         7.800000  2951.000000  \n",
-       "75%      -88.041069   4909.750000         8.500000  4426.500000  \n",
-       "max      -88.015313   6545.000000        12.900000  5902.000000  "
+       "count     17709\n",
+       "unique        1\n",
+       "top       False\n",
+       "freq      17709\n",
+       "Name: distance, dtype: object"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Now let's find out what rows are duplicates using a combination of full outer join and select where is not null\n",
-    "df_all = pd.merge(df2, df_in_db, how='outer')\n",
-    "df_all.describe()"
+    "df_all['distance'].isnull().describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17709\n"
+     ]
+    }
+   ],
+   "source": [
+    "#now let's get rid of duplicate rows!\n",
+    "df_all = df_all.dropna()\n",
+    "print df_all.shape[0]"
    ]
   },
   {
