added new tests file

--- a/Pandas_tosql_upsert.ipynb
+++ b/Pandas_tosql_upsert.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
@@ -12,14 +12,12 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "from sqlalchemy import create_engine\n",
-    "import sqlite3 as db\n",
-    "\n",
-    "POOL_SIZE = 50"
+    "import threading"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -40,22 +38,22 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>24285</th>\n",
-       "      <td>44</td>\n",
-       "      <td>90</td>\n",
-       "      <td>25</td>\n",
-       "      <td>83</td>\n",
+       "      <th>8668</th>\n",
+       "      <td>47</td>\n",
+       "      <td>50</td>\n",
+       "      <td>46</td>\n",
+       "      <td>33</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        A   B   C   D\n",
-       "24285  44  90  25  83"
+       "       A   B   C   D\n",
+       "8668  47  50  46  33"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,8 +61,6 @@
    "source": [
     "#Get sample data\n",
     "df = pd.DataFrame(np.random.randint(0,100,size=(100000, 4)), columns=list('ABCD'))\n",
-    "\n",
-    "#Lets use a self join to make sure our sample data doesnt have duplicates\n",
     "df.drop_duplicates(['A', 'B'], keep='last', inplace=True)\n",
     "\n",
     "df.head(1)"
@@ -72,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -86,6 +82,7 @@
     "DB_HOST = 'localhost'\n",
     "DB_PORT = '5432'\n",
     "DB_NAME = 'pandas_upsert'\n",
+    "POOL_SIZE = 50\n",
     "### Config update complete ###\n",
     "SQLALCHEMY_DATABASE_URI = '%s+%s://%s:%s@%s:%s/%s' %(DB_TYPE, DB_DRIVER, DB_USER,\n",
     "                                                     DB_PASS, DB_HOST, DB_PORT, DB_NAME)\n",
@@ -95,46 +92,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "success\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "def to_sql_newrows(df, pool_size, *args, **kargs):\n",
+    "    \"\"\"\n",
+    "    Extend the Python pandas to_sql() method to thread database insertion\n",
+    "\n",
+    "    Required: \n",
+    "        df : pandas dataframe to insert new rows into a database table\n",
+    "        POOL_SIZE : your sqlalchemy max connection pool size.  Set < your db connection limit.\n",
+    "                    Example where this matters: your cloud DB has a connection limit.\n",
+    "    *args:\n",
+    "        Pandas to_sql() arguments.  \n",
+    "\n",
+    "        Required arguments are:\n",
+    "            tablename : Database table name to write results to\n",
+    "            engine : SqlAlchemy engine\n",
+    "\n",
+    "        Optional arguments are:\n",
+    "            'if_exists' : 'append' or 'replace'.  If table already exists, use append.\n",
+    "            'index' : True or False.  True if you want to write index values to the db.\n",
+    "\n",
+    "\n",
+    "    Credits for intial threading code:\n",
+    "        http://techyoubaji.blogspot.com/2015/10/speed-up-pandas-tosql-with.html\n",
+    "    \"\"\"\n",
+    "\n",
+    "    CHUNKSIZE = 1000\n",
+    "    INITIAL_CHUNK = 100\n",
+    "    if len(df) > CHUNKSIZE:\n",
+    "        #write the initial chunk to the database if df is bigger than chunksize\n",
+    "        df.iloc[:INITIAL_CHUNK, :].to_sql(*args, **kargs)\n",
+    "    else:\n",
+    "        #if df is smaller than chunksize, just write it to the db now\n",
+    "        df.to_sql(*args, **kargs)\n",
+    "\n",
+    "    workers, i = [], 0\n",
+    "\n",
+    "    for i in range((df.shape[0] - INITIAL_CHUNK)/CHUNKSIZE):\n",
+    "        t = threading.Thread(target=lambda: df.iloc[INITIAL_CHUNK+i*CHUNKSIZE:INITIAL_CHUNK+(i+1)*CHUNKSIZE].to_sql(*args, **kargs))\n",
+    "        t.start()\n",
+    "        workers.append(t)\n",
+    "        \n",
+    "    df.iloc[INITIAL_CHUNK+(i+1)*CHUNKSIZE:, :].to_sql(*args, **kargs)\n",
+    "    [t.join() for t in workers]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "#Create a table with a unique constraint on A and B columns.\n",
     "\n",
     "engine.execute(\"\"\"DROP TABLE IF EXISTS \"test_upsert\" \"\"\")\n",
     "\n",
     "engine.execute(\"\"\"CREATE TABLE \"test_upsert\" (\n",
-    "                  \"ID\" SERIAL PRIMARY KEY,\n",
     "                  \"A\" INTEGER,\n",
     "                  \"B\" INTEGER,\n",
     "                  \"C\" INTEGER,\n",
-    "                  \"D\" INTEGER) \"\"\")\n",
-    "\n",
+    "                  \"D\" INTEGER,\n",
+    "                  CONSTRAINT pk_A_B PRIMARY KEY (\"A\",\"B\")) \n",
+    "                  \"\"\")\n",
+    "\"\"\"\n",
     "#Add unique constraint to table\n",
     "try:\n",
-    "    args = \"\"\" ALTER TABLE test_upsert ADD CONSTRAINT uk_a_b UNIQUE (\"A\", \"B\") \"\"\"\n",
+    "    args = ' ALTER TABLE test_upsert ADD CONSTRAINT uk_a_b UNIQUE (\"A\", \"B\") '\n",
     "    results = engine.execute(args)\n",
     "    print 'success'\n",
     "except:\n",
     "    print 'unique constraint already exists'\n",
-    "    \n",
+    "\"\"\"\n",
+    "\n",
     "#Insert data using pandas.to_sql\n",
     "df.to_sql('test_upsert', engine, if_exists='append', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -154,8 +197,8 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>44</td>\n",
-       "      <td>90</td>\n",
+       "      <td>47</td>\n",
+       "      <td>50</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -163,10 +206,10 @@
       ],
       "text/plain": [
        "    A   B\n",
-       "0  44  90"
+       "0  47  50"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
@@ -201,21 +244,21 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>607</td>\n",
-       "      <td>260</td>\n",
-       "      <td>303</td>\n",
-       "      <td>19</td>\n",
+       "      <td>905</td>\n",
+       "      <td>368</td>\n",
+       "      <td>145</td>\n",
+       "      <td>477</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     A    B    C   D\n",
-       "0  607  260  303  19"
+       "     A    B    C    D\n",
+       "0  905  368  145  477"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -238,7 +281,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "new df is 200000 rows, and data in db is 9999 rows\n"
+      "new df is 200000 rows, and data in db is 10000 rows\n"
      ]
     }
    ],
@@ -251,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
@@ -260,7 +303,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "left joined df is 94094 rows\n"
+      "left joined df is 94267 rows\n"
      ]
     },
     {
@@ -281,10 +324,10 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>607</td>\n",
-       "      <td>260</td>\n",
-       "      <td>303</td>\n",
-       "      <td>19</td>\n",
+       "      <td>905</td>\n",
+       "      <td>368</td>\n",
+       "      <td>145</td>\n",
+       "      <td>477</td>\n",
        "      <td>left_only</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -292,11 +335,11 @@
        "</div>"
       ],
       "text/plain": [
-       "     A    B    C   D     _merge\n",
-       "0  607  260  303  19  left_only"
+       "     A    B    C    D     _merge\n",
+       "0  905  368  145  477  left_only"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -347,21 +390,21 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>607</td>\n",
-       "      <td>260</td>\n",
-       "      <td>303</td>\n",
-       "      <td>19</td>\n",
+       "      <td>905</td>\n",
+       "      <td>368</td>\n",
+       "      <td>145</td>\n",
+       "      <td>477</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     A    B    C   D\n",
-       "0  607  260  303  19"
+       "     A    B    C    D\n",
+       "0  905  368  145  477"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +423,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "checking df size\n",
+      "connection pool not large enough - setting to max pool size\n",
+      "threadcount set to 50, initial chunk set to 44267\n",
+      "threading...\n",
+      "complete - joining results!\n",
+      "threading job ended!\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Trying multithreaded insert new rows into database...\n",
+    "tosql(df_unique, POOL_SIZE, upsert=True, 'test_upsert', engine, if_exists='append', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -392,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -411,7 +479,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>104093</td>\n",
+       "      <td>104314</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -419,22 +487,22 @@
       ],
       "text/plain": [
        "    count\n",
-       "0  104093"
+       "0  104314"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_in_db_2 = pd.read_sql_query('SELECT count(\"ID\") FROM test_upsert', engine)\n",
+    "df_in_db_2 = pd.read_sql_query('SELECT count(\"A\") FROM test_upsert', engine)\n",
     "df_in_db_2.head(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -447,7 +515,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>ID</th>\n",
+       "      <th>A</th>\n",
        "      <th>row</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -458,11 +526,11 @@
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [ID, row]\n",
+       "Columns: [A, row]\n",
        "Index: []"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,8 +539,8 @@
     "#Awesome, that seems to work.  We only inserted new rows!  Let's check to make sure it's unique\n",
     "df_dupscount = pd.read_sql_query(\"\"\"\n",
     "                                select * from (\n",
-    "                                      SELECT \"ID\",\n",
-    "                                      ROW_NUMBER() OVER(PARTITION BY \"A\", \"B\" ORDER BY \"ID\" asc) AS Row\n",
+    "                                      SELECT \"A\",\n",
+    "                                      ROW_NUMBER() OVER(PARTITION BY \"A\", \"B\" ORDER BY \"A\" asc) AS Row\n",
     "                                      FROM test_upsert\n",
     "                                    ) dups\n",
     "                                    where \n",
@@ -488,45 +556,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "#Awesome!  Now let's multiplex the results\n",
-    "#http://techyoubaji.blogspot.com/2015/10/speed-up-pandas-tosql-with.html\n",
-    "import threading\n",
-    "\n",
-    "def tosql(df, POOL_SIZE, *args, **kargs):\n",
-    "    CHUNKSIZE = 1000\n",
-    "    INITIAL_CHUNK = 100\n",
-    "    print 'checking df size'\n",
-    "    if len(df) > CHUNKSIZE:\n",
-    "        df.iloc[:INITIAL_CHUNK, :].to_sql(*args, **kargs)\n",
-    "    if kargs['if_exists'] == 'replace':\n",
-    "        kargs['if_exists'] = 'append'\n",
-    "    workers = []\n",
-    "    threadcount = (len(df) - INITIAL_CHUNK)/CHUNKSIZE\n",
-    "    \n",
-    "    try:\n",
-    "        assert (len(df) - INITIAL_CHUNK)/CHUNKSIZE < POOL_SIZE\n",
-    "        print 'threadcount reasonable'\n",
-    "        threadcount = (len(df) - INITIAL_CHUNK)/CHUNKSIZE\n",
-    "    except:\n",
-    "        pass\n",
-    "        \"\"\"\n",
-    "        print 'connection pool not large enough - setting to max pool size'\n",
-    "        threadcount = POOL_SIZE\n",
-    "        INITIAL_CHUNK = len(df) - POOL_SIZE*CHUNKSIZE\n",
-    "        print 'threadcount set to %s, initial chunk set to %s' %(threadcount, INITIAL_CHUNK)\"\"\"\n",
-    "        \n",
-    "    i=0\n",
-    "    print 'threading...'\n",
-    "    for i in range(threadcount):\n",
-    "        t = threading.Thread(target=lambda: df.iloc[INITIAL_CHUNK+i*CHUNKSIZE:INITIAL_CHUNK+(i+1)*CHUNKSIZE, :]\n",
-    "                                                   .to_sql(*args, **kargs))\n",
-    "        t.start()\n",
-    "        workers.append(t)\n",
-    "    df.iloc[INITIAL_CHUNK+(i+1)*CHUNKSIZE:, :].to_sql(*args, **kargs)\n",
-    "    print 'complete!'\n",
-    "    [t.join() for t in workers]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -535,10 +565,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "#Trying multithreaded insert new rows into database...\n",
-    "tosql(df_unique, POOL_SIZE, 'test_upsert', engine, if_exists='append', index=False)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
